--- a/digimon.html
+++ b/digimon.html
@@ -29,13 +29,15 @@
               </div>
             </div>
           </nav>
-    </div> <audio  src="assets/music/las canciones de digimon 1,2,3,4,5.mp3" controls autoplay  loop></audio>
+    </div> 
     <div> 
       
 </head>
 <body>
-    <center><h1>MUNDO DIGIMON</h1>/</center>
+    <div style=" margin-left: 700px; "><center><h1>MUNDO DIGIMON</h1>/</center>
     
+    </div>
+    <audio style="margin-left: 705px;"  src="assets/music/las canciones de digimon 1,2,3,4,5.mp3" controls autoplay  loop></audio>
     <div id="contenido">
 
 
