--- a/index.html
+++ b/index.html
@@ -11,32 +11,30 @@
     
 </head>
 
-<body> 
- 
- 
-  </div>
-    <div>
-
-        <nav class="navbar bg-dark" data-bs-theme="dark">
-            <div class="container-fluid">
-              <img src="assets/img/Digimon_Logo.svg.png" alt="Bootstrap" width="60" height="40">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="digimon.html">Digimon</a>
-                  </li>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </div>
+<body img src="./assets/img/cursor3.cur" style="cursor: url(./assets/img/cursor3.cur), auto;"></body>
+  <div>
+      
+    <nav class="navbar bg-dark" data-bs-theme="dark">
+        <div class="container-fluid">
+          <img src="assets/img/Digimon_Logo.svg.png" alt="Bootstrap" width="60" height="40">
+          <button  class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span  class="navbar-toggler-icon" img src="./assets/img/cursor3.cur" style="cursor: url(./assets/img/cursor3.cur), auto;"></span></span>
+          </button>
+          <div class="collapse navbar-collapse"  id="navbarNav" >
+            <ul class="navbar-nav"> 
+              <li  class="nav-item"> 
+                <a  class="nav-link active "  aria-current="page"   href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="digimon.html">Digimon</a>
+              </li>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+</div> 
+<div> 
     <div style="margin-left: 650px; margin-top: 150px;">
       <CENTer><H1 style="margin-left: 100px; margin-right: 950px;"> DIGIMON</H1></CENTer>
       <h1>
@@ -46,7 +44,7 @@
   </div>
   <div>
 
-    <center><section>
+    <center><section img src="./assets/img/cursor3.cur" style="cursor: url(./assets/img/cursor3.cur), auto;">
        <img src="assets/img/digicarrusel_1.jpeg" alt="">
        <img src="assets/img/carruseldigimon_2.jpeg" alt="">
        <img src="assets/img/carruseldigimon_3.jpeg" alt="">
